--- a/differential_dataflow/Cargo.toml
+++ b/differential_dataflow/Cargo.toml
@@ -1,10 +1,6 @@
 [package]
-name = "differential_dataflow"
+name = "differential_dataflow_graph_exe"
 version = "0.1.0"
-authors = ["Oliver Hope <oliverdnhope@gmail.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 timely = "0.11"
